<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.nbb.demetra</groupId>
    <artifactId>demetra-cli</artifactId>
    <packaging>jar</packaging>
    <version>2.0.0</version>

    <name>Demetra CLI</name>
    <description>Command line interface for JDemetra+</description>
        
    <url>https://github.com/nbbrd/jdemetra-cli</url>
    <licenses>
        <license>
            <name>European Union Public Licence (EUPL)</name>
            <url>https://joinup.ec.europa.eu/software/page/eupl/licence-eupl</url>
        </license>
    </licenses>        
    
    <properties>
        <!-- build -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.8</jdk.version>
        <netbeans.hint.jdkPlatform>JDK_1.8</netbeans.hint.jdkPlatform>
        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
        <appassembler-maven-plugin.version>1.10</appassembler-maven-plugin.version>
        <assertj.version>1.6.0</assertj.version>
        <!-- dependencies -->
        <demetra.version>2.0.0</demetra.version>
        <jopt-simple.version>4.9</jopt-simple.version>
        <jackson.version>2.6.3</jackson.version>
        <lombok.version>1.16.4</lombok.version>
    </properties>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>eu.europa.ec.joinup.sat</groupId>
                <artifactId>demetra-parent</artifactId>
                <version>${demetra.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sat</groupId>
                <artifactId>demetra-utils</artifactId>
                <version>${demetra.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sat</groupId>
                <artifactId>nbdemetra-utils</artifactId>
                <version>${demetra.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>eu.europa.ec.joinup.sat</groupId>
            <artifactId>demetra-spreadsheet</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sat</groupId>
            <artifactId>demetra-common</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sat</groupId>
            <artifactId>demetra-sdmx</artifactId>
        </dependency>
        <dependency>
            <groupId>eu.europa.ec.joinup.sat</groupId>
            <artifactId>nbdemetra-utils</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>net.java.dev.jna</groupId>
                    <artifactId>jna</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.java.dev.jna</groupId>
                    <artifactId>jna-platform</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreesvg</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
        </dependency>
        
        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
            <version>${jopt-simple.version}</version>
        </dependency>        
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-jaxb-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>${appassembler-maven-plugin.version}</version>
                <configuration>
                    <repositoryLayout>flat</repositoryLayout>
                    <programs>
                        <program>
                            <mainClass>demetra.cli.tsproviders.SpreadSheet2Ts</mainClass>
                            <id>spreadsheet2ts</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.tsproviders.Random2Ts</mainClass>
                            <id>random2ts</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.tsproviders.Uri2Ts</mainClass>
                            <id>uri2ts</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.tsproviders.Sdmx2Ts</mainClass>
                            <id>sdmx2ts</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.tsproviders.Ts2SpreadSheet</mainClass>
                            <id>ts2spreadsheet</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.dstats.Ts2DStats</mainClass>
                            <id>ts2dstats</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.various.TsFilter</mainClass>
                            <id>tsfilter</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.anomalydetection.Ts2Outliers</mainClass>
                            <id>ts2outliers</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.chart.Ts2Chart</mainClass>
                            <id>ts2chart</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.sa.Ts2Sa</mainClass>
                            <id>ts2sa</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.sa.Sa2Ts</mainClass>
                            <id>sa2ts</id>
                        </program>
                        <program>
                            <mainClass>demetra.cli.various.TsAggregate</mainClass>
                            <id>tsaggregate</id>
                        </program>
                    </programs>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble</id>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>                
            </plugin>
            <plugin>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
                <version>${assertj.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate-assertions</goal>
                        </goals>
                    </execution>
                </executions>                
                <configuration>
                    <classes>
                        <param>demetra.cli.helpers.InputOptions</param>
                        <param>demetra.cli.helpers.OutputOptions</param>
                    </classes>
                    <generateAssertions>true</generateAssertions>
                    <generateBddAssertions>false</generateBddAssertions>
                    <generateSoftAssertions>false</generateSoftAssertions>
                    <generateJUnitSoftAssertions>false</generateJUnitSoftAssertions>                    
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>